# tdxWork

./: .gitignore  RELEASE_NOTES.md
.workbuddy/memory/: 2026-04-19.md  MEMORY.md
Quan-Select/: .gitignore  README.md  SCORING.md  SCORING_GROWTH.md  SURPRISE_SYSTEM.md  WORKFLOW.md  backtest.py  batch_backtest_cli.py  build_sector_db.py  check_backtest.py  collect.py  daily_analysis.bat  final_compare.py  fund_strategies.py  main.py  news_sentiment.py  qs_config.py  readme_dailyPicks.txt  report.py  requirements.txt  score.py  simple_compare.py  start_backtest.bat  评分权重更新说明.md
Quan-Select/picks/: backtest_ui.html  start_backtest.html
db/: SCHEMA.md  _chk_trend.py  _migrate_to_weekly.py  _probe_dbs.py  _probe_schema.py  概念板块.txt
tdx-analysis/: .gitignore  README.md  concept_tool.py  config.py  extract_candidates.py  gen_concept_html_V1.3.py  run.bat  tool_config.py  update_concept_data_with_filter.py  virtual_sector_mgr.py  virtual_sectors.json
tdx-dll/ChanlunX/: .gitignore  Bi.cpp  Bi.h  BiChuLi.cpp  BiChuLi.h  CMakeLists.txt  ChanlunXg.h  ChanlunZb.h  Duan.cpp  Duan.h  KxianChuLi.cpp  KxianChuLi.h  LICENSE  Main.cpp  Main.h  README.md  ZhongShu.cpp  ZhongShu.h  build_x86.cmd  package.py  三浪下跌.txt  五彩K线.txt  五浪下跌.txt  日线线段选股.txt  缠论主图.txt
tdx-dll/ChanlunX/tests/: chanlunx_test.cpp
